# pytorch-pipeline

./: .gitignore  README.md  pyproject.toml
pytorch_pipeline/run/: file_cache.py  path_util.py  with_args.py
pytorch_pipeline/train/: callback.py  saver.py  trainer.py
pytorch_pipeline/util/: torch_util.py
scripts/: train_mnist.py
tests/: test_pytorch_pipeline.py
