[tool.poetry]
name = "pytorch_pipeline"
version = "0.1.0"
description = ""
authors = ["Yoonyoung Cho <jchocholate@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.9, <3.7"
torch = "1.7.1+cu101"
dataclasses = "^0.8"
numpy = "<1.20.2"
simple-parsing = "^0.0.14"
torchvision = "0.8.2+cu101"
tensorboard = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
argcomplete = "^1.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
